# py5

./: .gitignore  CODE_OF_CONDUCT.md  README.md  README.rst  pyproject.toml  setup.py
.github/: FUNDING.yml
py5/: __init__.py  base.py  bridge.py  color.py  create_font_tool.py  custom_exceptions.py  decorators.py  font.py  graphics.py  image.py  image_conversion.py  java_conversion.py  keyevent.py  macos_problem.py  methods.py  mouseevent.py  object_conversion.py  pmath.py  reference.py  render_helper.py  shader.py  shape.py  shape_conversion.py  sketch.py  spelling.py  surface.py  test.py  type_decorators.py  utilities.py  vector.py
py5/jars/: jars.md
py5/mixins/: __init__.py  data.py  math.py  pixels.py  print_tools.py  threads.py
py5_tools/: __init__.py  config.py  constants.py  environ.py  import_hook.py  imported.py  javafx.py  jvm.py  libraries.py  magics.py  parsing.py  printstreams.py  processing.py  reference.py  run.py  split_setup.py  testing.py  utilities.py
py5_tools/colors/: __init__.py  css4.py  mpl_cmaps.py  xkcd.py
py5_tools/hooks/: __init__.py  frame_hooks.py  hooks.py  zmq_hooks.py  zmq_hooks_fail.py
py5_tools/kernel/: __init__.py  __main__.py  install.py  kernel.py
py5_tools/live_coding/: __init__.py  controls.py  import_hook.py  notebook_launcher.py  standard_launcher.py  syncing.py
py5_tools/magics/: __init__.py  drawing.py  py5bot.py  sketchhooks.py  util.py
py5_tools/py5bot/: __init__.py  __main__.py  install.py  kernel.py  py5bot.py
py5_tools/tools/: __init__.py  live_coding.py  py5cmd.py  py5translate_imported2module.py  py5translate_module2imported.py  py5translate_processingpy2imported.py  py5utils.py  run_sketch.py
py5_tools/translators/: __init__.py  imported2module.py  module2imported.py  processingpy2imported.py  util.py
src/py5/: __init__.py  create_font_tool.py  custom_exceptions.py  graphics.py  image.py  image_conversion.py  keyevent.py  mouseevent.py  pmath.py  reference.py  shader.py  shape.py  shape_conversion.py  sketch.py  test.py  vector.py
src/py5_tools/: __init__.py  __main__.py  config.py  constants.py  environ.py  imported.py  jvm.py  libraries.py  parsing.py  printstreams.py  processing.py  split_setup.py  (+1 more)
(+45 files in other folders)
